--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
     "removeComments": false,
     "sourceMap": true,
     "target": "es5",
-	  "declaration": true, 
+	  "declaration": false, 
 	  "strict": true,
     "allowSyntheticDefaultImports": true,
 	  "typeRoots" : ["node_modules/pixi.js"],
