--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "template pixi application",
   "main": "./src/Application.js",
   "scripts": {
-    "start": "node prebuild.js && webpack serve --mode development --progress",
-    "build": "node prebuild.js && webpack --mode production"
+    "start": "webpack serve --mode development --progress",
+    "build": "webpack --mode production"
   },
   "author": "",
   "license": "MIT",
@@ -25,13 +25,13 @@
     "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^11.0.0",
     "html-webpack-plugin": "^5.5.0",
-    "jotform-css.js": "^1.0.1",
     "ts-loader": "^9.3.1",
     "tsconfig-paths-webpack-plugin": "^3.5.2",
     "typescript": "^4.7.4",
     "webpack": "^5.73.0",
     "webpack-bundle-analyzer": "^4.5.0",
     "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "^4.9.3"
+    "webpack-dev-server": "^4.9.3",
+    "webpack-prebuild-plugin": "^0.0.2"
   }
 }
