--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "jspdf": "^2.5.1",
     "pixi-multistyle-text": "^0.10.0",
     "pixi-textinput-v5": "^4.0.0-beta.10",
-    "pixi.js": "^6.4.2",
+    "pixi.js": "6.4.2",
     "webfontloader": "^1.6.28"
   },
   "devDependencies": {
